--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 
 <body>
-    我的github：<a href="https://github.com/1831553190">点击跳转</a> 联系我： QQ:
+    我的github：<a href="https://github.com/1831553190">点击跳转</a>
+    <br>联系我：<br> QQ:
     <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1831553190&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1831553190:52" alt="联系我" title="联系我" /></a>
 </body>
