--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <head>
     <title>eswd的网站</title>
-
+    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 
 <body>
-    我的github：<a href="https://github.com/1831553190">点击跳转</a>
-    <br>联系我：<br> QQ:
-    <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1831553190&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1831553190:52" alt="联系我" title="联系我" /></a>
+    <ul class="nav nav-pills">
+        <li role="presentation" class="active"><a href="#">主页</a></li>
+        <li role="presentation"><a href="javascript:void()" onclick="alert('eswd 2019-10-29')">关于</a></li>
+    </ul>
+    <div class="jumbotron">
+        <h1>我的github</h1>
+        <p><a class="btn btn-primary btn-lg" href="https://github.com/1831553190" role="button">点击跳转>></a></p>
+    </div>
+    <nav class="navbar navbar-default navbar-fixed-bottom">
+        <div class="container">
+            <p>
+                <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1831553190&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1831553190:52" alt="联系我" title="联系我" /></a>联系站长
+                <p>
+
+        </div>
+    </nav>
+
 </body>
