--- a/index.html
+++ b/index.html
@@ -2,27 +2,28 @@
     <title>eswd的网站</title>
     <meta charset="UTF-8">
     <script src="js/jquery-3.4.1.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0,
-minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
     <link rel="stylesheet" href="css/bootstrap.css">
+
+    <script src="js/jquery-confirm.min.js"></script>
+    <link rel="stylesheet" href="css/jquery-confirm.min.css">
+    <script type="text/javascript" src="js/webopt.js"></script>
 </head>
 <body>
-
 <div class="container">
     <ul class="nav nav-pills">
         <li role="presentation" class="active"><a href="#">主页</a></li>
-        <li role="presentation"><a onclick="alert('eswd 2019-10-29')">关于</a></li>
+        <li role="presentation"><a onclick="confirmDialog()">关于</a></li>
     </ul>
     <div class="jumbotron">
         <h1>我的github</h1>
         <p><a class="btn btn-primary btn-lg" href="https://github.com/1831553190" role="button">点击跳转>></a></p>
     </div>
 
-
     <nav class="navbar navbar-default navbar-fixed-bottom">
         <div class="container">
             <p>
-                <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1831553190&site=qq&menu=yes"><img border="0" src="http://wpa.qq.com/pa?p=2:1831553190:52" alt="联系我" title="联系我" />联系站长</a>
+                <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=1831553190&site=qq&menu=yes">联系站长</a>
                 <p>
         </div>
     </nav>
