--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         <li role="presentation"><a onclick="confirmDialog()">关于</a></li>
     </ul>
     <div class="jumbotron">
-        <h1>我的github</h1>
-        <p><a class="btn btn-primary btn-lg" href="https://github.com/1831553190" role="button">点击跳转>></a></p>
+        <p><a class="btn btn-primary btn-lg" href="https://github.com/1831553190" role="button">我的github主页>></a></p>
+    </div>
+    <div class="jumbotron">
+        <p><a class="btn btn-primary btn-lg" href="https://www.cnblogs.com/eswd" role="button">我的博客>></a></p>
     </div>
 
     <nav class="navbar navbar-default navbar-fixed-bottom">
@@ -27,5 +29,11 @@
                 <p>
         </div>
     </nav>
+
+
+
 </div>
+
+
+
 </body>
